--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </aside>
     <div class="Doc1" id="Pjabon">
       <div class="Tarjeta1" id="T1">
-        <img src="/JCocoT.png" id="Jdiario1" />
+        <img src="/JCocoT.png" id="Jdiario1" alt="imag1"/>
         <div class="Ti1">
           <h3>Jabon de Coco</h3>
         </div>
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="Tarjeta1" id="T1">
-        <img src="/JAve.png" id="Jdiario1" />
+        <img src="/JAve.png" id="Jdiario1" alt="imag2"/>
         <div class="Ti1">
           <h3>Jabon de Avena</h3>
         </div>
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="Tarjeta1" id="T1">
-        <img src="/JCar.png" id="Jdiario1" />
+        <img src="/JCar.png" id="Jdiario1" alt="imag3"/>
         <div class="Ti1">
           <h3>Jabon Carbon Activado</h3>
         </div>
@@ -55,7 +55,7 @@
     </div>
     <div class="Doc2" id="Pshampoo">
       <div class="Tarjeta1" id="T1">
-        <img src="/Sshs1.png" id="Jdiario1" />
+        <img src="/Sshs1.png" id="Jdiario1" alt="imag4"/>
         <div class="Ti1">
           <h3>Shampoo Solido</h3>
         </div>
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="Tarjeta1" id="T1">
-        <img src="/Sshs2.png" id="Jdiario1" />
+        <img src="/Sshs2.png" id="Jdiario1" alt="imag5"/>
         <div class="Ti1">
           <h3>Shampoo Solido</h3>
         </div>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="Tarjeta1" id="T1">
-        <img src="/Ssh1.png" id="Jdiario1" />
+        <img src="/Ssh1.png" id="Jdiario1" alt="imag6"/>
         <div class="Ti1">
           <h3>Shampoo Liquido</h3>
         </div>
@@ -84,7 +84,7 @@
     </div>
     <div class="Doc2" id="Pcrema">
       <div class="Tarjeta1" id="T1">
-        <img src="/Cre1.png" id="Jdiario1" />
+        <img src="/Cre1.png" id="Jdiario1" alt="imag7"/>
         <div class="Ti1">
           <h3>Cremas y Tratamientos</h3>
         </div>
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="Tarjeta1" id="T1">
-        <img src="/Cree1.png" id="Jdiario1" />
+        <img src="/Cree1.png" id="Jdiario1" alt="imag8"/>
         <div class="Ti1">
           <h3>Cremas Especificas</h3>
         </div>
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="Tarjeta1" id="T1">
-        <img src="/Cosv.png" id="Jdiario1" />
+        <img src="/Cosv.png" id="Jdiario1" alt="imag9"/>
         <div class="Ti1">
           <h3>Cosmeticos Varios</h3>
         </div>
